--- a/css/navy.css
+++ b/css/navy.css
@@ -1323,6 +1323,7 @@ a.article-title:hover {
   overflow: hidden;
 }
 #mobile-nav-dimmer {
+  display: none;
   position: absolute;
   top: 0;
   left: 100%;
@@ -1336,6 +1337,8 @@ a.article-title:hover {
   transition: opacity 0.4s, transform 0s 0.4s;
 }
 .mobile-nav-on #mobile-nav-dimmer {
+  position: fixed;
+  display: block;
   opacity: 0.7;
   -webkit-transform: translateX(-100%);
   -moz-transform: translateX(-100%);
